--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,4 +82,14 @@
     .form_data form input {
         width: 100%;
     }
+
+    .menu_items_container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 520px) {
+    .menu_items_container {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
