--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ a {
     font-size: 4rem;
     font-family: var(--righteous);
     text-align: center;
+    color: var(--white_color);
 }
 
 .main_heading-1 {
@@ -361,7 +362,7 @@ header {
     text-align: center;
 }
 
-.btn_container .btn-cat {
+.btn-cat {
     padding: 0.7rem 1.2rem;
     cursor: pointer;
     margin: 0 2rem;
@@ -411,4 +412,62 @@ header {
     color: var(--primary_color);
     font-size: 1.8rem;
 }
+
+/* Customer Feedback */
+
+#customer_feedback {
+    padding: 10rem 0;
+    background: url('') no-repeat center center/cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+#customer_feedback::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.customer_cards_container {
+    margin: 4rem 0;
+    z-index: 1;
+}
+
+.customer_card {
+    margin: 4rem 0;
+    background: #f4f4f4;
+    padding: 3rem;
+    text-align: center;
+    box-shadow: var(--bow-shadow);
+}
+
+.customer_card img {
+    display: block;
+    object-fit: contain;
+    border-radius: 50%;
+    margin: auto;
+}
+
+.customer_card p {
+    font-size: 1.2rem;
+    text-align: justify;
+    padding: 2rem 0;
+}
+
+.customer_card .name {
+    text-align: center;
+    font-size: 1.5rem;
+    color: var(--primary_color);
+}
+
+
+
+
+
+
+
 
