static counter section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -90,12 +90,21 @@
     .btn-cat {
         margin: 1rem 1rem;  
     }
+
+    .counters {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
 }
 
 /* 520px */
 
 @media(max-width: 520px) {
     .menu_items_container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .counters {
         grid-template-columns: repeat(1, 1fr);
     }
 }
