--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,40 @@ header {
     color: var(--primary_color);
 }
 
+/* Static Counter */
+
+#static_counter {
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../img/counterbg.jpg') no-repeat center center/cover;
+    padding: 10rem 0;
+}
+
+.counters {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-align: center;
+    color: var(--white_color);
+    grid-gap: 2rem;
+}
+
+.counter {
+    border: 1px solid var(--white_color);
+    padding: 2rem;
+    color: var(--primary_color);
+    border-radius: 5px;
+}
+
+.counter h2 {
+    font-size: 2rem;
+    font-family: var(--unbuntu);
+    color: var(--white_color);
+}
+
+.num {
+    font-size: 5rem;
+    font-family: var(--righteous);
+}
+
+
 
 
 
