--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,51 @@ header {
     font-family: var(--righteous);
 }
 
+/* Chef Section */
+
+#chef {
+    padding: 10rem 0;
+}
+
+.chef_container {
+    margin: 4rem 0;
+    text-align: center;
+    display: flex;
+    gap: 5rem;
+    justify-content: center;
+}
+
+.chef_cards {
+    border: 1px solid #ddd;
+    width: 100%;
+    box-shadow: var(--bow-shadow);
+}
+
+.chef_cards img {
+    height: 300px;
+}
+
+.chef_content {
+    padding: 2rem 0;
+}
+
+.position {
+    font-size: 1.5rem;
+    color: var(--primary_color);
+}
+
+.social_icons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    padding: 2rem 0;
+}
+
+.social_icons i {
+    cursor: pointer;
+}
+
 
 
 
