--- a/css/responsive.css
+++ b/css/responsive.css
@@ -99,6 +99,10 @@
         flex-direction: column;
     }
 
+    .footer_container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
 }
 
 /* 520px */
@@ -109,6 +113,10 @@
     }
 
     .counters {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .footer_container {
         grid-template-columns: repeat(1, 1fr);
     }
 
